# robotics-406E

./: PROJECT_REPORT.md  README.md
install/: local_setup.sh  setup.sh
install/litter_bot/lib/litter_bot/: coordinator_node  goal_sender  litter_manager_node
install/litter_bot/share/litter_bot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/litter_bot_bringup/share/litter_bot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/litter_bot_description/share/litter_bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/litter_bot/: package.xml  setup.cfg  setup.py
src/litter_bot/litter_bot/: coordinator_node.py  goal_sender.py  litter_manager_node.py
src/litter_bot_bringup/: CMakeLists.txt  package.xml
src/litter_bot_bringup/config/: rviz_config.rviz
src/litter_bot_bringup/launch/: full_system.launch.py  simulation_only.launch.py
src/litter_bot_description/: CMakeLists.txt  package.xml
src/litter_bot_description/launch/: display.launch.py
src/litter_bot_description/rviz/: display.rviz
src/litter_bot_description/urdf/: robot.urdf.xacro
src/litter_bot_gazebo/: CMakeLists.txt  package.xml
src/litter_bot_gazebo/launch/: simulation.launch.py
src/litter_bot_gazebo/worlds/: med_cim.world  med_cim_mapping.world
src/litter_bot_manipulation/: package.xml  setup.cfg  setup.py
src/litter_bot_manipulation/config/: arm_controller.yaml  moveit_config.yaml
src/litter_bot_manipulation/launch/: manipulation.launch.py
src/litter_bot_manipulation/litter_bot_manipulation/: __init__.py  gripper_controller.py  manipulation_node.py
src/litter_bot_navigation/: package.xml  setup.cfg  setup.py
src/litter_bot_navigation/config/: nav2_params.yaml  slam_toolbox_params.yaml
src/litter_bot_navigation/launch/: localization.launch.py  navigation.launch.py  slam.launch.py
src/litter_bot_navigation/litter_bot_navigation/: __init__.py  coverage_planner_node.py
src/litter_bot_navigation/maps/: generate_map.py  med_cim_map.pgm  med_cim_map.yaml
src/litter_bot_perception/: package.xml  setup.cfg  setup.py
src/litter_bot_perception/launch/: perception.launch.py
src/litter_bot_perception/litter_bot_perception/: __init__.py  color_detection_node.py  depth_detection_node.py  detection_node.py  litter_localizer_node.py  simple_localizer_node.py
(+75 files in other folders)
