<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>litter_bot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for litter collection robot</description>
  <maintainer email="hydria@todo.todo">hydria</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>litter_bot</exec_depend>
  <exec_depend>litter_bot_description</exec_depend>
  <exec_depend>litter_bot_gazebo</exec_depend>
  <exec_depend>litter_bot_navigation</exec_depend>
  <exec_depend>litter_bot_perception</exec_depend>
  <exec_depend>litter_bot_manipulation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

