<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>litter_bot_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for litter collection robot</description>
  <maintainer email="hydria@todo.todo">hydria</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros_pkgs</depend>
  <depend>litter_bot_description</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>

